instabilities when hwater tends to 0
- fix retard coefficient for unsaturated (depends on saturation flow)
- fix flow/balance computation in 2D solvers
- handle correctly dry cells for stationaryGroundwater2DFoam solver
- fix deltat reduction for Picard loop groundwaterTransportFoam
- fix C flux computation in CSV (groundwaterTransportFoam)

************************
*** PMFv1912
*** Multi-species transport and timestep management
************************

### Solvers

- Global:

  -patchEvent are now automatically read by solvers inside fields file
  -keyword "eventTimeTracking" is used to constraint the solver to
  explictly compute solution at event time (source/patch events)

- groundwaterFoam

  - The non-convergence of the Picard's algorithm now forces the solver to
  recompute the time iteration reducing the time step
  - add specific storage term (Ss) to the Richards' formulation
  - adding by default the mass-conservative terms to head pressure equation
  (mixed-formulation). The old head-pressure formulation can be now obtained
  adding "massConservative false;" in transportProperties

- groundwater2DFoam

  - solver adapted to handle uniform or non-uniform infiltration event (also
  accept non-conformal mesh event => consider as uniform infiltration)
  - time-stepping is now based on the truncation error (see the notes for
  porousScalarTransportFoam)

- porousScalarTransportFoam
  
  - support for multiple transported species in a single case. Species are
  listed in a "species" wordList in the transportProperties dictionary. 
  Each species can have its own porousTransport parameters and dispersion
  model. These are found in sub-dictionaries of transportProperties, each 
  named the same as a species. The change is backward compatible (the absence
  of a list of species is taken to mean a single species with name "C", and
  species without their own sub-dictionaries have their properties read